--- a/playbooks/Maintenance/maint-diskspace.yaml
+++ b/playbooks/Maintenance/maint-diskspace.yaml
@@ -1,6 +1,7 @@
 ---
 - name: Check disk space
-  hosts: "{{ my_hosts | d([]) }}"
+  #hosts: "{{ my_hosts | d([]) }}"
+  hosts: all
 
   tasks:
     - name: Check disk space available
