--- a/playbooks/notifications/notify-discord.yaml
+++ b/playbooks/notifications/notify-discord.yaml
@@ -33,8 +33,8 @@
     # Security advise: if you commit this data to a repository it is
     # strongly recommended to encrypt `notify_discord_webhook_token` using
     # Ansible Vault.
-    notify_discord_webhook_id: '{{ discord_webhook_id }}'
-    notify_discord_webhook_token: '{{ discord_webhook_token }}'
+    notify_discord_webhook_id: "{{ discord_webhook_id }}"
+    notify_discord_webhook_token: "{{ discord_webhook_token }}"
 
     # Do not modify following regular expressions unless you know what
     # you're doing. Those are to ensure that whatever you've set as
